Add PUT /messages/{messageId}
